--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -21,7 +21,6 @@
         <edit name="family" mode="prepend" binding="strong">
             <string>SF Pro</string>
         </edit>
-        <edit name="family" mode="append" binding="strong"><string>Noto Color Emoji</string></edit>
     </match>
     <match target="pattern">
         <test qual="any" name="family">
@@ -124,10 +123,13 @@
             <string>WenQuanYi Micro Hei</string>
         </edit>
     </match>
-        <match target="pattern">
-        <test qual="any" name="family"><string>emoji</string></test>
-        <edit name="family" mode="assign" binding="same"><string>Symbols Nerd Font</string></edit>
-        <edit name="family" mode="append" binding="weak"><string>JoyPixels</string></edit>
-    </match>
+    <fontconfig>
+    <match>
+        <test name="family"><string>FiraCode Nerd Font Mono</string></test>
+        <edit name="family" mode="prepend" binding="strong">
+            <string>Noto Color Emoji</string>
+        </edit>
+  </match>
+</fontconfig>
 </fontconfig>
 
