--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -29,6 +29,9 @@
         <edit name="family" mode="prepend" binding="strong">
             <string>SF Mono</string>
         </edit>
+         <edit name="family" mode="prepend" binding="strong">
+            <string>Noto Color Emoji</string>
+        </edit>
     </match>
     <match>
         <test name="lang" compare="contains">
@@ -40,7 +43,10 @@
         <edit name="family" mode="prepend">
             <string>Noto Serif CJK SC</string>
         </edit>
-    </match>
+        <edit name="family" mode="prepend" binding="strong">
+            <string>Noto Color Emoji</string>
+        </edit>
+   </match>
     <match>
         <test name="lang" compare="contains">
             <string>zh</string>
@@ -51,7 +57,10 @@
         <edit name="family" mode="prepend">
             <string>Noto Sans CJK SC</string>
         </edit>
-    </match>
+        <edit name="family" mode="prepend" binding="strong">
+            <string>Noto Color Emoji</string>
+        </edit>
+</match>
     <match>
         <test name="lang" compare="contains">
             <string>zh</string>
@@ -62,7 +71,10 @@
         <edit name="family" mode="prepend">
             <string>Noto Sans Mono CJK SC</string>
         </edit>
-    </match>
+        <edit name="family" mode="prepend" binding="strong">
+            <string>Noto Color Emoji</string>
+        </edit>
+   </match>
 
     <!--WenQuanYi Zen Hei -> WenQuanYi Micro Hei -->
     <match target="pattern">
