--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -6,12 +6,13 @@
             <bool>false</bool>
         </edit>
     </match>
+
     <match>
         <test qual="any" name="family">
             <string>serif</string>
         </test>
         <edit name="family" mode="prepend" binding="strong">
-            <string>Noto Serif</string>
+            <string>Noto Serif</string> 
         </edit>
     </match>
     <match target="pattern">
@@ -19,8 +20,8 @@
             <string>sans-serif</string>
         </test>
         <edit name="family" mode="prepend" binding="strong">
-            <string>SF Pro</string>
-        </edit>
+            <string>SF Pro Text</string>
+        </edit> 
     </match>
     <match target="pattern">
         <test qual="any" name="family">
@@ -28,9 +29,6 @@
         </test>
         <edit name="family" mode="prepend" binding="strong">
             <string>SF Mono</string>
-        </edit>
-         <edit name="family" mode="prepend" binding="strong">
-            <string>Noto Color Emoji</string>
         </edit>
     </match>
     <match>
@@ -43,9 +41,6 @@
         <edit name="family" mode="prepend">
             <string>Noto Serif CJK SC</string>
         </edit>
-        <edit name="family" mode="prepend" binding="strong">
-            <string>Noto Color Emoji</string>
-        </edit>
    </match>
     <match>
         <test name="lang" compare="contains">
@@ -57,9 +52,6 @@
         <edit name="family" mode="prepend">
             <string>Noto Sans CJK SC</string>
         </edit>
-        <edit name="family" mode="prepend" binding="strong">
-            <string>Noto Color Emoji</string>
-        </edit>
 </match>
     <match>
         <test name="lang" compare="contains">
@@ -70,9 +62,6 @@
         </test>
         <edit name="family" mode="prepend">
             <string>Noto Sans Mono CJK SC</string>
-        </edit>
-        <edit name="family" mode="prepend" binding="strong">
-            <string>Noto Color Emoji</string>
         </edit>
    </match>
 
@@ -135,13 +124,4 @@
             <string>WenQuanYi Micro Hei</string>
         </edit>
     </match>
-    <fontconfig>
-    <match>
-        <test name="family"><string>FiraCode Nerd Font Mono</string></test>
-        <edit name="family" mode="prepend" binding="strong">
-            <string>Noto Color Emoji</string>
-        </edit>
-  </match>
 </fontconfig>
-</fontconfig>
-
