--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -12,7 +12,7 @@
             <string>serif</string>
         </test>
         <edit name="family" mode="prepend" binding="strong">
-            <string>Noto Serif</string> 
+            <string>SF Pro Text</string> 
         </edit>
     </match>
     <match target="pattern">
@@ -39,7 +39,7 @@
             <string>serif</string>
         </test>
         <edit name="family" mode="prepend">
-            <string>Noto Serif CJK SC</string>
+            <string>PingFang SC</string>
         </edit>
    </match>
     <match>
@@ -50,7 +50,7 @@
             <string>sans-serif</string>
         </test>
         <edit name="family" mode="prepend">
-            <string>Noto Sans CJK SC</string>
+            <string>PingFang SC</string>
         </edit>
 </match>
     <match>
@@ -61,7 +61,7 @@
             <string>monospace</string>
         </test>
         <edit name="family" mode="prepend">
-            <string>Noto Sans Mono CJK SC</string>
+            <string>Sarasa Mono SC</string>
         </edit>
    </match>
 
