--- a/dot_config/fontconfig/conf.d/60-emoji.conf
+++ b/dot_config/fontconfig/conf.d/60-emoji.conf
@@ -4,25 +4,25 @@
   <match>
     <test name="family"><string>FiraCode Nerd Font Mono</string></test>
     <edit name="family" mode="prepend" binding="strong">
-      <string>Noto Color Emoji</string>
+      <string>Apple Color Emoji</string>
     </edit>
   </match>
   <match>
     <test name="family"><string>sans-serif</string></test>
     <edit name="family" mode="prepend" binding="weak">
-      <string>Noto Color Emoji</string>
+      <string>Apple Color Emoji</string>
     </edit>
   </match>
   <match>
     <test name="family"><string>serif</string></test>
     <edit name="family" mode="prepend" binding="weak">
-      <string>Noto Color Emoji</string>
+      <string>Apple Color Emoji</string>
     </edit>
   </match>
   <match>
     <test name="family"><string>monospace</string></test>
     <edit name="family" mode="prepend" binding="weak">
-      <string>Noto Color Emoji</string>
+      <string>Apple Color Emoji</string>
     </edit>
   </match>
 </fontconfig>
