--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -61,7 +61,7 @@
             <string>monospace</string>
         </test>
         <edit name="family" mode="prepend">
-            <string>Sarasa Mono SC</string>
+            <string>PingFang SC</string>
         </edit>
    </match>
 
