--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,2 +1,10 @@
-set -s default-terminal 'tmux-256color'
-seg -g mouse on
+set -s default-terminal 'screen-256color'
+set -g mouse on
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin "arcticicestudio/nord-tmux"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
