--- a/dot_config/alacritty.yml
+++ b/dot_config/alacritty.yml
@@ -30,6 +30,9 @@ font:
     style: Bold Italic
 
 colors:
+  footer_bar:
+    background: '#434c5e'
+    foreground: '#d8dee9'
   primary:
     background: '#2e3440'
     foreground: '#d8dee9'
@@ -47,9 +50,6 @@ colors:
     matches:
       foreground: CellBackground
       background: '#88c0d0'
-    bar:
-      background: '#434c5e'
-      foreground: '#d8dee9'
   normal:
     black: '#3b4252'
     red: '#bf616a'
